--- a/css/style.css
+++ b/css/style.css
@@ -8565,7 +8565,13 @@ h1, h2, h3, h4, h5,
                 right: 0;
                 max-width: 50%;
                 padding-left: 45px;
-                padding-right: 3em; } }
+                padding-right: 3em; } 
+              }
+              @media (max-width: 768px) {
+                .owl-carousel.home-slider, .owl-carousel.home-slider .slider-item {
+                    height: 460px; /* Height for mobile screens */
+                }
+            }
         .owl-carousel.home-slider .slider-item .slider-text .subheading {
           color: #000000;
           font-weight: 600;
@@ -8812,6 +8818,11 @@ h1, h2, h3, h4, h5,
         background: #ffbd39;
         color: #fff; }
 
+        @media (max-width: 768px) {
+          .img-container, .img-about {
+            display: none;
+          }
+        }
 .ftco-about .img-about {
   width: 100%;
   z-index: 0;
@@ -8866,6 +8877,13 @@ h1, h2, h3, h4, h5,
     font-weight: 600;
     letter-spacing: 3px;
     text-transform: uppercase; }
+
+    @media (max-width: 767.98px) {
+      .resume-wrap .date {
+        font-size: 20px; }
+        .resume-wrap h2 {
+          font-size: 20px; }
+      }
 
 .services-1 {
   margin-bottom: 40px;
@@ -9104,6 +9122,10 @@ textarea.form-control {
   opacity: 0;
   visibility: hidden; }
 
+  @media (max-width: 767.98px) {
+    .ftco-animate {
+      justify-content: center; } }
+
 .bg-primary {
   background: #ffbd39 !important; }
 
@@ -9120,7 +9142,7 @@ textarea.form-control {
   position: relative; }
   @media (max-width: 767.98px) {
     .ftco-section {
-      padding: 6em 0; } }
+      padding: 0em 0; } }
 
 .ftco-no-pt {
   padding-top: 0 !important; }
@@ -9258,7 +9280,7 @@ textarea.form-control {
       font-weight: 400; }
     @media (max-width: 767.98px) {
       .heading-section h2 {
-        font-size: 38px; } }
+        font-size: 28px; } }
   .heading-section.heading-section-white .subheading {
     color: rgba(255, 255, 255, 0.9) !important; }
   .heading-section.heading-section-white h2 {
